@@ -1,3 +1,11 @@
+2008-04-16  Wouter Bolsterlee  <wbolster@svn.gnome.org>
+
+	* src/Extensions/Banshee.Daap/Banshee.Daap/DaapLoginDialog.cs:
+	* src/Extensions/Banshee.Podcasting/Banshee.Podcasting/PodcastCore_
+	Interface.cs:
+
+	Added a few translator comments.
+
 2008-04-16  Gabriel Burt  <gabriel.burt@gmail.com>
 
 	* src/Dap/Banshee.Dap.Mtp/Banshee.Dap.Mtp/MtpSource.cs: Specify what
